--- a/src/_data/sources.yml
+++ b/src/_data/sources.yml
@@ -1,4 +1,8 @@
 - id: google_cloud_best_practices
+  author: 'Kari Loftesness, Jason Davenport'
+  author_ids:
+    - kari_loftesness
+    - jason_davenport
   title: 'Five Best Practices for Using AI Coding Assistants'
   publisher: 'Google Cloud'
   published: '2024'
@@ -12,6 +16,9 @@
     responsibility-oversight: 'Highlights how upfront framing reduces downstream risk when AI accelerates implementation.'
 
 - id: infoq_pdca_cycle
+  author: 'Ken Judy'
+  author_ids:
+    - ken_judy
   title: 'Applying the PDCA Cycle to AI Code Generation'
   publisher: 'InfoQ'
   published: '2024'
@@ -23,6 +30,9 @@
     planning-and-structure: 'An exploration of using a Plan-Do-Check-Act loop with AI, grounding AI-assisted coding in established engineering process discipline.'
 
 - id: graphite_ai_pair_programming
+  author: 'Greg Foster'
+  author_ids:
+    - greg_foster
   title: 'AI Pair Programming Best Practices'
   publisher: 'Graphite'
   published: '2024'
@@ -34,6 +44,9 @@
     planning-and-structure: 'A practitioner-oriented guide on how context, constraints, and expectations shape the usefulness of AI coding output.'
 
 - id: techradar_ai_security
+  author: 'Craig Hale'
+  author_ids:
+    - craig_hale
   title: 'AI Is Creating Code Faster—but Also More Security Issues'
   publisher: 'TechRadar Pro'
   published: '2023'
@@ -47,6 +60,12 @@
     governance-guardrails: 'Evidence that faster AI output requires explicit checks and security guardrails.'
 
 - id: arxiv_human_centered_practices
+  author: 'Ruotong Wang, Ruijia Cheng, Denae Ford, Thomas Zimmermann'
+  author_ids:
+    - ruotong_wang
+    - ruijia_cheng
+    - denae_ford
+    - thomas_zimmermann
   title: 'Human-Centered Practices for Responsible AI Development'
   repository: 'arXiv'
   published: '2023'
@@ -61,6 +80,8 @@
 
 - id: boehm_software_engineering_economics
   author: 'Barry W. Boehm'
+  author_ids:
+    - barry_w_boehm
   title: 'Software Engineering Economics'
   publisher: 'Prentice Hall'
   published: '1981'
@@ -73,6 +94,10 @@
 
 - id: ericsson_deliberate_practice
   author: 'K. Anders Ericsson, Ralf T. Krampe, Clemens Tesch-Römer'
+  author_ids:
+    - k_anders_ericsson
+    - ralf_t_krampe
+    - clemens_tesch_romer
   title: 'The Role of Deliberate Practice in the Acquisition of Expert Performance'
   journal: 'Psychological Review, Vol. 100, No. 3'
   published: '1993'
@@ -95,6 +120,11 @@
     ai-production-scale: 'DORA’s 2025 report explaining that AI amplifies existing organizational capabilities.'
 
 - id: microsoft_ai_code_nypost
+  author: 'Taylor Herzlich'
+  author_ids:
+    - taylor_herzlich
+  mentioned_people_ids:
+    - satya_nadella
   title: 'Microsoft CEO Satya Nadella says 30% of code now written by AI'
   publisher: 'New York Post'
   published: '2025-04-30'
@@ -117,6 +147,10 @@
     governance-guardrails: 'Survey results on human review requirements for AI-generated code.'
 
 - id: arxiv_safe_ai_framework
+  author: 'Satyam Kumar Navneet, Joydeep Chandra'
+  author_ids:
+    - satyam_kumar_navneet
+    - joydeep_chandra
   title: 'SAFE-AI Framework: Preventing Failures in AI-Driven Software Engineering'
   repository: 'arXiv'
   published: '2025-08-15'
@@ -128,6 +162,11 @@
     governance-guardrails: 'Academic guidance on guardrails, sandboxing, and runtime verification for AI-driven software engineering.'
 
 - id: arxiv_security_degradation_ai_code
+  author: 'Shivani Shukla, Himanshu Joshi, Romilla Syed'
+  author_ids:
+    - shivani_shukla
+    - himanshu_joshi
+    - romilla_syed
   title: 'Security Degradation in Iterative AI Code Generation -- A Systematic Analysis of the Paradox'
   repository: 'arXiv'
   published: '2025-05-19'
@@ -141,6 +180,9 @@
     tooling-guardrails: 'Quantifies security regression across iterations, supporting the need for automated scanning between AI edits.'
 
 - id: arxiv_context_engineering_multi_agent
+  author: 'Muhammad Haseeb'
+  author_ids:
+    - muhammad_haseeb
   title: 'Context Engineering for Multi-Agent LLM Code Assistants Using Elicit, NotebookLM, ChatGPT, and Claude Code'
   repository: 'arXiv'
   published: '2025-08-09'
@@ -152,6 +194,11 @@
     tooling-guardrails: 'Describes a multi-agent workflow with role decomposition and validation that improves reliability in code assistants.'
 
 - id: arxiv_resttsllm_api_testing
+  author: 'Thiago Barradas, Aline Paes, Vânia de Oliveira Neves'
+  author_ids:
+    - thiago_barradas
+    - aline_paes
+    - vania_de_oliveira_neves
   title: 'Combining TSL and LLM to Automate REST API Testing: A Comparative Study'
   repository: 'arXiv'
   published: '2025-09-05'
@@ -192,6 +239,9 @@
     rapid-prototyping: 'IDEO describes building an LLM prototyping tool and shortening time to first prototype from weeks to days.'
 
 - id: github_copilot_productivity_research
+  author: 'Eirini Kalliamvakou'
+  author_ids:
+    - eirini_kalliamvakou
   title: 'Research: quantifying GitHub Copilot’s impact on developer productivity and happiness'
   publisher: 'GitHub'
   published: '2022-09-07'
@@ -215,6 +265,8 @@
 
 - id: cian_clarke_vibe_coding_spec_driven
   author: 'Cian Clarke'
+  author_ids:
+    - cian_clarke
   title: 'From Vibe Coding to Spec-Driven Development'
   publisher: 'Tessl'
   published: '2026-01-06'
@@ -227,6 +279,8 @@
 
 - id: microsoft_spec_kit_blog
   author: 'Den Delimarsky'
+  author_ids:
+    - den_delimarsky
   title: 'Diving Into Spec-Driven Development With GitHub Spec Kit'
   publisher: 'Microsoft Developer'
   published: '2025-09-15'
@@ -239,6 +293,8 @@
 
 - id: martinfowler_sdd_tools
   author: 'Birgitta Böckeler'
+  author_ids:
+    - birgitta_bockeler
   title: 'Understanding Spec-Driven-Development: Kiro, spec-kit, and Tessl'
   publisher: 'martinfowler.com'
   published: '2026-01-29'
@@ -251,6 +307,8 @@
 
 - id: kiro_agentic_ai_development
   title: 'Kiro: Agentic AI development from prototype to production'
+  mentioned_people_ids:
+    - hakon_eriksen_drange
   publisher: 'Kiro'
   accessed: '2026-02-03'
   url: 'https://kiro.dev/'
